fabric/testdata/out/ing_spp-product-identity-perf-test-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"09f4689e-aaf5-4044-b5b7-b9f2088318c9","deployment-id":"d-2ra6pjhfno3q3m2vq6fs87ed2r","pipeline-id":"l-2j2jz7dxvehx8rvs15wuj4sajb"},"name":"spp-product-identity-perf-test-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"spp-product-identity-perf-test.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-identity-perf-test","servicePort":"http"},"pathTy [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2021-09-20T13:48:01Z"
  generation: 1
  labels:
    controller-uid: 09f4689e-aaf5-4044-b5b7-b9f2088318c9
    deployment-id: d-2ra6pjhfno3q3m2vq6fs87ed2r
    pipeline-id: l-2j2jz7dxvehx8rvs15wuj4sajb
  name: spp-product-identity-perf-test-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-identity-perf-test
    uid: 09f4689e-aaf5-4044-b5b7-b9f2088318c9
  resourceVersion: "1378641721"
  uid: 18a348d7-85fb-4d97-9de8-4655ecbdad29
spec:
  rules:
  - host: spp-product-identity-perf-test.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-perf-test
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
